--- a/_includes/knowledge-intro.html
+++ b/_includes/knowledge-intro.html
@@ -9,7 +9,13 @@
                   International graduate students, compared to their domestic counterparts, experience multiple additional barriers to success that cut or significantly limit their access to vital resources for academic and professional development and/or mental and physical health. The aggregate impact of the current pandemic, the unpromising job market, and other related crises have further complicated the already precarious lives of international graduate students.
                 </p>
                 <p class="text-faded">
-                  The purpose of this survey is to identify and raise awareness about the disparities between international graduate students’ experiences and domestic graduate students’ experiences. We hope to identify key issues, concerning international graduate students, that we can put at the forefront of our future advocacy efforts. Our objective is to shed light on the nearly invisible inequities that, even in our current “woke” political climate, are often overlooked in higher education institutions.
+                  The purpose of this survey is to identify and raise awareness about the disparities between international graduate students’ experiences and domestic graduate students’ experiences.
+                </p>
+                <p class="text-faded">
+                  We hope to identify key issues, concerning international graduate students, that we can put at the forefront of our future advocacy efforts. Our objective is to shed light on the nearly invisible inequities that, even in our current “woke” political climate, are often overlooked in higher education institutions.
+                </p>
+                <p class="text-faded">
+                  We want to map the landscape of your diverse experiences, we want to know where these experiences converge and diverge, we want to understand what your most immediate concerns and needs are, and we want to know what changes you hope to see in the future. We also hope to open channels of communication between all international students beyond national and geopolitical lines. Tell us what you want us to know and help us help you and others like you.
                 </p>
                 <p>
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaeXW-EPkswSlUe5yLP-LrULdFttogwr2R_DlJWWa5iOJteA/viewform?fbzx=-2565945766701127848" class="btn btn-default btn-xl">Tell Your Story: Take the Survey</a>
