new colors new design

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -23,7 +23,7 @@
                     <a class="page-scroll" href="#knowledge">Survey</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#action">About Us</a>
+                    <a class="page-scroll" href="#about">About Us</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#testimony">Testimony</a>
