--- a/_includes/testimony.html
+++ b/_includes/testimony.html
@@ -1,4 +1,4 @@
-  <aside class="bg-dark" id="testimony">
+  <aside class="bg-primary" id="testimony">
       <div class="container text-center">
           <div class="call-to-action">
               <h2>Want to tell your story? <br><br> We're collecting audio files of international students sharing their experiences.</h2>
