--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,6 +8,7 @@
   {% include header.html %}
   {% include call-to-action.html %}
   {% include knowledge-intro.html %}
+  {% include about.html %}
   {% include testimony.html %}
   {% include contact.html %}
   {% include scripts.html %}
