--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,7 +57,7 @@ p {
     background-color: $theme-dark;
     color: white;
     a {
-        color: ##0D47A1;
+        color: #b56576;
         &:hover,
         &:focus {
             color: darken(#b56576, 10%);
