--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>International Students Advocacy</h1>
+            <h1>International Student Advocacy</h1>
             <hr>
             <p>Envisioning a better future for international graduate students.</p>
 <!--             <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
