--- a/_includes/knowledge-intro.html
+++ b/_includes/knowledge-intro.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
 
-              <h1>International Students Advocacay</h1>
+              <h1>The International Student Survey</h1>
                 <p class="text-faded">
                   International graduate students, compared to their domestic counterparts, experience multiple additional barriers to success that cut or significantly limit their access to vital resources for academic and professional development and/or mental and physical health. The aggregate impact of the current pandemic, the unpromising job market, and other related crises have further complicated the already precarious lives of international graduate students.
                 </p>
@@ -18,7 +18,7 @@
                   We want to map the landscape of your diverse experiences, we want to know where these experiences converge and diverge, we want to understand what your most immediate concerns and needs are, and we want to know what changes you hope to see in the future. We also hope to open channels of communication between all international students beyond national and geopolitical lines. Tell us what you want us to know and help us help you and others like you.
                 </p>
                 <p>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaeXW-EPkswSlUe5yLP-LrULdFttogwr2R_DlJWWa5iOJteA/viewform?fbzx=-2565945766701127848" class="btn btn-default btn-xl">Tell Your Story: Take the Survey</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeaeXW-EPkswSlUe5yLP-LrULdFttogwr2R_DlJWWa5iOJteA/viewform?fbzx=-2565945766701127848" class="btn btn-default btn-xl">Take the Survey</a>
                 </p>
             </div>
         </div>
