modifying theme-primary color

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,9 +34,9 @@
 // }
 
 // variables.less
-$theme-primary: #1565C0;
+$theme-primary: #003049;
 $theme-dark: #393e46;
-$theme-pink: #b56576;
+$theme-pink: #1565C0;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
