still updating theme colors

--- a/css/main.scss
+++ b/css/main.scss
@@ -34,9 +34,9 @@
 // }
 
 // variables.less
-$theme-primary: #003049;
+$theme-primary: #118ab2;
 $theme-dark: #393e46;
-$theme-pink: #1565C0;
+$theme-pink: #118ab2;
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
