--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -57,10 +57,10 @@ p {
     background-color: $theme-dark;
     color: white;
     a {
-        color: #073b4c;
+        color: #118ab2;
         &:hover,
         &:focus {
-            color: darken(#073b4c, 10%);
+            color: darken(#118ab2, 10%);
             }
     }
 }
