--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -5,7 +5,7 @@
                 <h2 class="section-heading">International students deserve better.</h2>
                 <hr class="light">
                 <p class="text-faded">Universities benefit from international students and workers, but their policies cause significant harm to the students they recruit and to their families. </p>
-                <p class="text-faded">While immigration policies are set at the national level, there are changes that can be made by universities and departments to improve the quality of life for international students.</p> 
+                <p class="text-faded">While immigration policies are set at the national level, universities and departments can make changes, alter policies, and provide further resources to improve the quality of life for international students.</p>
                 <p  class="text-faded">Join the VFC as we build a community of support for international students, document their experiences, and take action to fight for a better future. </p>                
             </div>
         </div>
