--- a/_includes/knowledge-intro.html
+++ b/_includes/knowledge-intro.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
 
-              <h1>The International Student Survey</h1>
+              <h1>The International Students' Experience Survey</h1>
                 <p class="text-faded">
                   International graduate students, compared to their domestic counterparts, experience multiple additional barriers to success that cut or significantly limit their access to vital resources for academic and professional development and/or mental and physical health. The aggregate impact of the current pandemic, the unpromising job market, and other related crises have further complicated the already precarious lives of international graduate students.
                 </p>
