--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -1,4 +1,4 @@
-<section class="bg-dark" id="about">
+<section class="bg-dark" id="action">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
